--- a/keyboard/style.css
+++ b/keyboard/style.css
@@ -39,7 +39,7 @@ body.body--night-theme {
 .night__theme {
 	right: calc((100% - 1008px) / 2);
 	top: 20px;
-	position: absolute;
+	position: fixed;
 	color: var(--night-theme);
 	cursor: pointer;
 
@@ -54,13 +54,14 @@ body.body--night-theme {
 	line-height: 130%;
 	max-width: 1008px;
 	width: 100%;
-	height: 120px;
+	height: 160px;
 	margin-bottom: 30px;
 	border: none;
 	outline: none;
 	background-color: var(--keyboard-color);
 	padding: 10px;
 	resize: none;
+	border-radius: 5px;
 }
 
 .keyboard {
@@ -72,6 +73,7 @@ body.body--night-theme {
 	transition: bottom .4s;
 	padding: 5px;
 	margin: 0 auto;
+	margin-bottom: 30px;	
 }
 
 .keyboard--hidden {
@@ -104,12 +106,14 @@ body.body--night-theme {
 	box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 }
 .keyboard__key:hover {
-background-color: rgba(156, 154, 154, 0.2) ;
+background-color: rgb(238, 234, 234) ;
 }
 
 .keyboard__key:active {
 background-color: rgba(0, 0, 0, 0.2);
 color: white;
+transform: scale(0.97);
+box-shadow: inset;
 }
 
 .backspace__key {
@@ -134,4 +138,9 @@ color: white;
 
 .space__key {
 	width: 445px;
+}
+
+span {
+	display: block;	
+	text-align: center;
 }
